# tg-lambdabot

./: .gitignore  LICENSE  README.md  flake.nix  package.yaml  stack.yaml  tg-echobot.cabal  tg-lambdabot.cabal
.github/workflows/: main.yml
app/: API.hs  Commands.hs  Eval.hs  Lib.hs  Main.hs
src/: API.hs  Commands.hs  Eval.hs  Lib.hs
