cabal-version:      2.4
name:               tg-lambdabot
version:            0.1.0.0
synopsis:           Lambdabot for telegram.
description:
  Please see the README on GitHub at <https://github.com/berberman/tg-lambdabot#readme>

category:           Web
homepage:           https://github.com/berberman/tg-lambdabot#readme
bug-reports:        https://github.com/berberman/tg-lambdabot/issues
author:             berberman
maintainer:         berberman
copyright:          2020 berberman
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md
tested-with:        GHC ==8.10.2

source-repository head
  type:     git
  location: https://github.com/berberman/tg-lambdabot

executable tg-lambdabot
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    API
    Commands
    Eval
    Lib

  build-depends:
    , aeson
    , base
    , megaparsec
    , microlens
    , polysemy
    , process
    , req
    , scientific
    , text
    , unordered-containers

  default-language: Haskell2010
